<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	android:background="@drawable/fragment_background">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<FrameLayout
			android:id="@+id/minimap"
			android:layout_width="match_parent"
			android:layout_height="150dp" />

		<TextView
			android:id="@+id/what_header"
			style="@style/SectionHeader"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/minimap"
			android:layout_margin="@dimen/margin_default"
			android:text="@string/info_what"
			android:textIsSelectable="false" />

		<Button
			android:id="@+id/times_button"
			style="@style/DefaultButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_below="@id/what_header"
			android:layout_marginLeft="@dimen/margin_half"
			android:layout_marginRight="@dimen/margin_default"
			android:text="@string/info_times" />

		<TextView
			android:id="@+id/address_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/what_header"
			android:layout_marginLeft="@dimen/margin_default"
			android:layout_marginRight="@dimen/margin_half"
			android:layout_toLeftOf="@id/times_button"
			android:paddingLeft="4dp"
			android:text="@string/info_address"
			android:textIsSelectable="false" />

		<TextView
			android:id="@+id/tokens_header"
			style="@style/SectionHeader"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/address_text"
			android:layout_margin="@dimen/margin_default"
			android:text="@string/info_tokens"
			android:textIsSelectable="false" />

		<Button
			android:id="@+id/getmore_button"
			style="@style/DefaultButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_below="@id/tokens_header"
			android:layout_marginLeft="@dimen/margin_half"
			android:layout_marginRight="@dimen/margin_default"
			android:text="@string/info_getmore" />

		<TextView
			android:id="@+id/entry_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/tokens_header"
			android:layout_marginBottom="@dimen/margin_half"
			android:layout_marginLeft="@dimen/margin_default"
			android:layout_marginRight="@dimen/margin_half"
			android:layout_toLeftOf="@id/getmore_button"
			android:paddingLeft="4dp"
			android:text="@string/info_entry"
			android:textIsSelectable="false" />

		<TextView
			android:id="@+id/token_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/entry_text"
			android:layout_marginBottom="@dimen/margin_half"
			android:layout_marginLeft="@dimen/margin_default"
			android:layout_marginRight="@dimen/margin_default"
			android:layout_toLeftOf="@id/getmore_button"
			android:paddingLeft="4dp"
			android:text="@string/info_token"
			android:textIsSelectable="false" />

		<TextView
			android:id="@+id/extra_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/token_text"
			android:layout_marginLeft="@dimen/margin_default"
			android:layout_marginRight="@dimen/margin_default"
			android:paddingLeft="4dp"
			android:text="@string/info_extra"
			android:textIsSelectable="false" />

		<TextView
			style="@style/SectionHeader"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/extra_text"
			android:layout_margin="@dimen/margin_default"
			android:text="@string/info_more"
			android:textIsSelectable="false" />
	</RelativeLayout>

</ScrollView>