<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/margin_default" >

	<TextView
		android:id="@+id/name_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/margin_default"
		android:textColor="#000"
		android:textIsSelectable="true"
		android:textSize="@dimen/text_large" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/margin_default"
		android:orientation="horizontal" >

		<View
			android:id="@+id/color_view"
			android:layout_width="0dp"
			android:layout_height="150dp"
			android:layout_weight="1"
			android:background="@color/darkred" />

		<View
			android:id="@+id/abv_view"
			android:layout_width="0dp"
			android:layout_height="150dp"
			android:layout_weight="1"
			android:background="@color/darkred" />

		<View
			android:id="@+id/bitterness_view"
			android:layout_width="0dp"
			android:layout_height="150dp"
			android:layout_weight="1"
			android:background="@color/darkred" />

		<View
			android:id="@+id/sweetness_view"
			android:layout_width="0dp"
			android:layout_height="150dp"
			android:layout_weight="1"
			android:background="@color/darkred" />

		<View
			android:id="@+id/acidity_view"
			android:layout_width="0dp"
			android:layout_height="150dp"
			android:layout_weight="1"
			android:background="@color/darkred" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/margin_default"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/color_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/info_color"
			android:textSize="@dimen/text_small"
			android:gravity="center" />

		<TextView
			android:id="@+id/abv_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/info_abv"
			android:textSize="@dimen/text_small"
			android:gravity="center" />
		
		<TextView
			android:id="@+id/bitterness_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/info_bitterness"
			android:textSize="@dimen/text_small"
			android:gravity="center" />
		
		<TextView
			android:id="@+id/sweetness_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/info_sweetness"
			android:textSize="@dimen/text_small"
			android:gravity="center" />
		
		<TextView
			android:id="@+id/acidity_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/info_acidity"
			android:textSize="@dimen/text_small"
			android:gravity="center" />
		
	</LinearLayout>

</LinearLayout>